<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="title">contoh intent</string>
    <string name="btn_move_activity">pindah aktivity</string>
    <string name="btn_move_data">pindah dengan data</string>
    <string name="btn_move_object">pindah dengan object</string>
    <string name="btn_call">panggil telepon</string>
    <string name="btn_with_result">Pindah Activity untuk Result</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="view_second_activity">ini halaman pindah 1</string>
    <string name="result">hasil</string>
</resources>
